--- a/app.html
+++ b/app.html
@@ -323,6 +323,99 @@
       background: rgba(248, 113, 113, 0.35);
     }
 
+    /* Fretboard */
+    .fretboard-controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      align-items: center;
+      margin: 8px 0 6px;
+      color: var(--text-muted);
+      font-size: 0.82rem;
+    }
+
+    .fretboard-controls label {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      cursor: pointer;
+    }
+
+    .fretboard {
+      border-radius: var(--radius-lg);
+      border: 1px solid var(--border-subtle);
+      background: radial-gradient(circle at top left, rgba(56, 189, 248, 0.04), transparent 55%);
+      padding: 12px;
+      overflow-x: auto;
+    }
+
+    .string-row {
+      display: grid;
+      grid-template-columns: 44px repeat(13, minmax(38px, 1fr));
+      gap: 4px;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .string-label {
+      text-align: right;
+      padding-right: 8px;
+      color: var(--text-muted);
+      font-weight: 600;
+      font-size: 0.9rem;
+    }
+
+    .fret {
+      border-radius: 10px;
+      border: 1px solid var(--border-subtle);
+      padding: 10px 4px;
+      text-align: center;
+      position: relative;
+      background: linear-gradient(180deg, rgba(15, 23, 42, 0.85), #020617);
+      color: var(--text-muted);
+      transition: transform var(--transition-fast), border-color var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast), color var(--transition-fast);
+    }
+
+    .fret .fret-label {
+      font-size: 0.78rem;
+      font-weight: 600;
+    }
+
+    .fret .fret-dot {
+      position: absolute;
+      bottom: 6px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 10px;
+      height: 10px;
+      border-radius: 999px;
+      background: rgba(148, 163, 184, 0.28);
+    }
+
+    .fret.in-scale {
+      border-color: rgba(56, 189, 248, 0.7);
+      color: var(--text-main);
+      background:
+        radial-gradient(circle at 20% 0, rgba(56, 189, 248, 0.16), transparent 55%),
+        #0b1225;
+      box-shadow: 0 3px 12px rgba(15, 23, 42, 0.8);
+    }
+
+    .fret.chord-note::after {
+      content: "";
+      position: absolute;
+      inset: 3px;
+      border-radius: 8px;
+      border: 1px solid rgba(251, 191, 36, 0.95);
+      box-shadow: 0 0 10px rgba(251, 191, 36, 0.55);
+      pointer-events: none;
+    }
+
+    .fret.root-note {
+      box-shadow: 0 0 0 1px rgba(244, 63, 94, 0.7), 0 0 12px rgba(244, 63, 94, 0.55);
+      border-color: rgba(244, 63, 94, 0.9);
+    }
+
     /* Chord table */
     table {
       width: 100%;
@@ -499,6 +592,27 @@
               </span>
             </div>
           </div>
+
+          <div class="fretboard-wrapper">
+            <h2>
+              Interactive fretboard
+              <span class="tag">Standard EADGBE</span>
+            </h2>
+            <p class="helper">
+              Mirrors the keyboard highlights: blue for scale notes, gold for the selected chord, red for the key root.
+            </p>
+            <div class="fretboard-controls">
+              <label>
+                <input type="checkbox" id="leftHandedToggle" />
+                Left-handed layout
+              </label>
+              <label>
+                <input type="checkbox" id="noteLabelToggle" checked />
+                Show note names
+              </label>
+            </div>
+            <div id="fretboard" class="fretboard"></div>
+          </div>
         </div>
 
         <!-- Right: chords and progressions -->
@@ -603,8 +717,13 @@
       scaleIndices: [], // [pc, ...]
       scaleNames: [],   // ["C", "D", ...]
       chords: [],       // chord objects
-      selectedChordIndex: null
+      selectedChordIndex: null,
+      leftHanded: false,
+      showNoteLabels: true
     };
+
+    const FRET_COUNT = 12;
+    const STANDARD_TUNING = [4, 9, 2, 7, 11, 4]; // E A D G B E (low to high) as pitch classes
 
     // Build major scale indices + names for a given root, taking into account sharps/flats usage
     function buildMajorScale(root) {
@@ -748,6 +867,76 @@
       });
     }
 
+    function buildFretboard() {
+      const fretboard = document.getElementById("fretboard");
+      fretboard.innerHTML = "";
+
+      const namingSet = state.useFlats ? FLATS : SHARPS;
+      const strings = state.leftHanded ? [...STANDARD_TUNING].reverse() : STANDARD_TUNING;
+      const fretMarkers = new Set([3, 5, 7, 9, 12]);
+
+      strings.forEach((openPc) => {
+        const row = document.createElement("div");
+        row.className = "string-row";
+
+        const label = document.createElement("div");
+        label.className = "string-label";
+        label.textContent = namingSet[openPc];
+        row.appendChild(label);
+
+        for (let fret = 0; fret <= FRET_COUNT; fret++) {
+          const pcIndex = (openPc + fret) % 12;
+          const fretEl = document.createElement("div");
+          fretEl.className = "fret";
+          fretEl.dataset.pc = pcIndex.toString();
+          fretEl.dataset.fret = fret.toString();
+          fretEl.innerHTML = `
+            <div class="fret-label">${state.showNoteLabels ? namingSet[pcIndex] : ""}</div>
+            <div class="fret-dot" style="opacity: ${fretMarkers.has(fret) ? 1 : 0};"></div>
+          `;
+          row.appendChild(fretEl);
+        }
+
+        fretboard.appendChild(row);
+      });
+
+      updateFretboardHighlighting();
+    }
+
+    function updateFretboardHighlighting() {
+      const frets = document.querySelectorAll(".fret");
+      const rootIndex = state.rootIndex;
+      const scaleIndices = state.scaleIndices;
+      const selectedChord =
+        state.selectedChordIndex != null ? state.chords[state.selectedChordIndex] : null;
+      const namingSet = state.useFlats ? FLATS : SHARPS;
+
+      frets.forEach((fretEl) => {
+        const pcIndex = parseInt(fretEl.dataset.pc, 10);
+        const label = fretEl.querySelector(".fret-label");
+
+        fretEl.classList.remove("in-scale", "chord-note", "root-note");
+
+        if (state.showNoteLabels) {
+          label.textContent = namingSet[pcIndex];
+        } else {
+          label.textContent = "";
+        }
+
+        if (pcIndex === rootIndex) {
+          fretEl.classList.add("root-note");
+        }
+
+        if (scaleIndices.includes(pcIndex)) {
+          fretEl.classList.add("in-scale");
+        }
+
+        if (selectedChord && selectedChord.pcs.includes(pcIndex)) {
+          fretEl.classList.add("chord-note");
+        }
+      });
+    }
+
     // Render chord table
     function renderChordTable() {
       const tbody = document.getElementById("chordTableBody");
@@ -831,12 +1020,14 @@
       }
       updateChordRowSelection();
       updateKeyboardHighlighting();
+      updateFretboardHighlighting();
     }
 
     function clearChordSelection() {
       state.selectedChordIndex = null;
       updateChordRowSelection();
       updateKeyboardHighlighting();
+      updateFretboardHighlighting();
     }
 
     // Roman numeral -> degree index (0-based)
@@ -919,8 +1110,10 @@
 
       renderScalePills();
       buildKeyboard();
+      buildFretboard();
       renderChordTable();
       updateKeyboardHighlighting();
+      updateFretboardHighlighting();
 
       // Clear progression display
       document.getElementById("progressionPills").innerHTML = "";
@@ -938,6 +1131,16 @@
       });
 
       document.getElementById("resetChordBtn").addEventListener("click", clearChordSelection);
+
+      document.getElementById("leftHandedToggle").addEventListener("change", (e) => {
+        state.leftHanded = e.target.checked;
+        buildFretboard();
+      });
+
+      document.getElementById("noteLabelToggle").addEventListener("change", (e) => {
+        state.showNoteLabels = e.target.checked;
+        updateFretboardHighlighting();
+      });
 
       // Default key
       setKey("C");
