--- a/app.html
+++ b/app.html
@@ -1175,104 +1175,65 @@
     }
 
     // Build a 3-notes-per-string major scale pattern from the key root,
-    // starting on a chosen string, within a 4-fret span.
+    // starting on a chosen string, using a fixed Ionian interval map.
     function generateScaleTabPattern(startStringIndex) {
-      const scalePcs = state.scaleIndices;
       const rootPc = state.rootIndex;
 
-      if (!scalePcs || scalePcs.length === 0) return null;
+      // 1. The Fixed Interval Pattern for 3NPS Major Scale (Ionian)
+      // These are semitone distances from the starting Root note.
+      // (Root, M2, M3 | P4, P5, M6 | M7, R, M2 | etc...)
+      const IONIAN_INTERVALS = [
+        0, 2, 4, // String 1
+        5, 7, 9, // String 2
+        11, 12, 14, // String 3
+        16, 17, 19, // String 4
+        21, 23, 24, // String 5
+        26, 28, 29 // String 6
+      ];
 
-      // 1) Find root fret on the chosen string within 0–FRET_COUNT
+      // 2. Find the Root Fret on the chosen start string (0–12)
       const openPcStart = STANDARD_TUNING[startStringIndex];
       let rootFret = null;
-      for (let f = 0; f <= FRET_COUNT; f++) {
+      for (let f = 0; f <= 12; f++) {
         if ((openPcStart + f) % 12 === rootPc) {
           rootFret = f;
           break;
         }
       }
-      if (rootFret == null) return null;
+
+      // If we can't find a root (unlikely), or if starting on high strings leaves no room
+      if (rootFret === null) return null;
 
       const positions = [];
-      const rootSemi = STRING_OPEN_SEMITONES[startStringIndex] + rootFret;
 
-      // Always start on the root
-      positions.push({
-        stringIndex: startStringIndex,
-        fret: rootFret,
-        semitone: rootSemi,
-        isRoot: true
-      });
+      // The absolute semitone value of the root note relative to Low E open (0)
+      const rootAbsolutePitch = STRING_OPEN_SEMITONES[startStringIndex] + rootFret;
 
-      let lastSemitone = rootSemi;
-      let lastFret = rootFret;
+      let intervalIndex = 0;
 
-      // 2) For each string from startStringIndex upwards, grab up to 3 scale notes in that fret window
+      // 3. Loop through strings starting from the chosen string
       for (let s = startStringIndex; s < STANDARD_TUNING.length; s++) {
-        const openPc = STANDARD_TUNING[s];
-        const openSemi = STRING_OPEN_SEMITONES[s];
+        if (intervalIndex >= IONIAN_INTERVALS.length) break;
 
-        // Find the first scale tone on this string that stays in pitch order.
-        let firstFret = null;
-        let notesOnThisString = 0;
+        for (let n = 0; n < 3; n++) {
+          if (intervalIndex >= IONIAN_INTERVALS.length) break;
 
-        if (s === startStringIndex) {
-          firstFret = rootFret;
-          notesOnThisString = 1; // root already added
-        } else {
-          const searchStart = Math.max(0, lastFret - 1);
-          for (let f = searchStart; f <= FRET_COUNT; f++) {
-            const pc = (openPc + f) % 12;
-            if (!scalePcs.includes(pc)) continue;
+          const offset = IONIAN_INTERVALS[intervalIndex];
+          const noteAbsolutePitch = rootAbsolutePitch + offset;
 
-            const semi = openSemi + f;
-            if (semi <= lastSemitone) continue;
-
-            firstFret = f;
-            positions.push({
-              stringIndex: s,
-              fret: f,
-              semitone: semi,
-              isRoot: false
-            });
-
-            lastSemitone = semi;
-            lastFret = f;
-            notesOnThisString = 1;
-            break;
-          }
-        }
-
-        if (firstFret == null) continue; // No scale tones left on this string within range
-
-        const windowEnd = Math.min(FRET_COUNT, firstFret + 4);
-
-        for (let f = firstFret + 1; f <= windowEnd; f++) {
-          // Skip the root position we already added
-          if (s === startStringIndex && f === rootFret) continue;
-
-          const pc = (openPc + f) % 12;
-          if (!scalePcs.includes(pc)) continue;
-
-          const semi = openSemi + f;
-          if (semi <= lastSemitone) continue;
+          // Calculate fret: Note Pitch - String Open Pitch
+          const stringOpenPitch = STRING_OPEN_SEMITONES[s];
+          const fret = noteAbsolutePitch - stringOpenPitch;
 
           positions.push({
             stringIndex: s,
-            fret: f,
-            semitone: semi,
-            isRoot: false
+            fret: fret,
+            isRoot: offset % 12 === 0
           });
 
-          lastSemitone = semi;
-          lastFret = f;
-          notesOnThisString++;
-          if (notesOnThisString >= 3) break; // 3 notes per string max
+          intervalIndex++;
         }
       }
-
-      // Sort strictly by pitch order
-      positions.sort((a, b) => a.semitone - b.semitone);
 
       return { positions, rootStringIndex: startStringIndex, rootFret };
     }
@@ -1297,6 +1258,8 @@
 
       const lines = [];
 
+      const slotWidth = 4; // uniform width per note slot for alignment
+
       // We render TAB high → low (top line = high e)
       for (let sDisplay = STANDARD_TUNING.length - 1; sDisplay >= 0; sDisplay--) {
         const label = stringLabelsLowToHigh[sDisplay];
@@ -1305,14 +1268,16 @@
         positions.forEach((step) => {
           if (step.stringIndex === sDisplay) {
             const fret = step.fret;
-            // 3-character slot per note: --8 or -10
-            if (fret < 10) {
-              line += "--" + fret;
-            } else {
-              line += "-" + fret;
+            let fretStr = fret.toString();
+
+            if (step.isRoot) {
+              fretStr = `(${fret})`;
             }
+
+            const dashCount = Math.max(0, slotWidth - fretStr.length);
+            line += "-".repeat(dashCount) + fretStr;
           } else {
-            line += "---"; // empty step on this string
+            line += "-".repeat(slotWidth); // empty step on this string
           }
         });
 
